# quark-story

./: .gitignore  BACKEND_VALIDATION_REPORT.md  BUILD_VERIFICATION_REPORT.md  EMAIL_TEMPLATE.txt  README.md  SUBMISSION_CHECKLIST.txt  SUBMISSION_COVER_LETTER.md  SUBMISSION_NOTE.md  SUBMISSION_PACKAGE.md  SUBMISSION_README.md  SUBMISSION_RESPONSE.md  backend_validation_report.txt  scrape-code.js  validate_build.sh
XTension/: CMakeLists.txt  PHASE2_IMPLEMENTATION_PLAN.md
XTension/include/: IStoryOperations.h
XTension/src/: ApiClient.cpp  ApiClient.h  Logger.h  StoryOperationsImpl.cpp  StoryPalette.cpp  StoryPalette.h  XTMain.cpp  dialog.rc  resource.h
backend/: .dockerignore  Dockerfile  requirements.txt  run.py
backend/app/: __init__.py  config.py  routes.py  services.py
backend/data/: stories.json
